--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ a.timecode:hover {
 
 .highlight::before {
     display: block;
-    content: "➤";
-    left: -1.5em;
+    content: "▶";
+    left: -1.75em;
     position: absolute;
 }
