--- a/style.css
+++ b/style.css
@@ -158,3 +158,12 @@ a.timecode:hover {
     left: -1.75em;
     position: absolute;
 }
+
+#linklist {
+    height: 21em;
+    margin: 0 -3em;
+    overflow-y: scroll;
+    padding: 0 3em;
+    top: 27em;
+    width: 27em;
+}
